Sun Oct 15 15:06:03 NOVST 2000
max:
* exit(1) to printLinkError()

Mon Oct  9 17:29:40 NOVST 2000
max:
* bugfix for last patch from yesterday

Mon Oct  9 01:38:41 NOVST 2000
max (patch from Alex Bronin):
* allowing to use any length passwords.
  pktPwd will stripped to 8 symbols, others remains unchanged.

Sat Oct  7 16:58:58 MSZ 2000
tobi:
* fecfg2fconf is now platform independent
* -> included fecfg2fconf into standard makefile.

----- cvs ci ------
Wed Sep 27 20:24:45 NOVST 2000
max:
* robotsArea token

----- cvs ci ------
Tue Sep 26 00:25:41 NOVST 2000
max (patch from Serguei Revtov):
* addrDiffAlways value for BundleNameStyle & linkBundleNameStyle

----- cvs ci ------
Sun Sep 24 15:14:00 NOVST 2000
max (patch from Serguei Revtov):
* some dumb checks in tparser

----- cvs ci ------
Sat Sep 23 17:52:53 NOVST 2000
max (patch from Serguei Revtov):
* token linkBundleNameStyle
* additional checks with LinkWithImportLog

----- cvs ci ------
Fri Sep 15 15:47:22 NOVST 2000
max:
* choose "right" link for filearea
  (if exist... echo->useAka & link->ourAka must be the same)

----- cvs ci ------
Fri Sep  8 17:11:07 NOVST 2000
max (patch from PG):
* fixed include parsing

----- cvs ci ------
Sat Sep  2 20:48:59 NOVST 2000
max (patch from Michael Kulinich):
* token keepTrsMail

----- cvs ci ------
Sat Aug 27 19:31:04 NOVST 2000
max:
* "tparser -Dmodule=hpt" prints only hpt keywords
* excludePassthroughCarbon token
* packer none (no pack mail)

----- cvs ci ------
Fri Aug 25 12:37:46 NOVST 2000
max (patch from Serguei Revtov):
* token BundleNameStyle

----- cvs ci ------
Mon Aug 14 12:07:14 NOVST 2000
max (patch from PG):
* tparser show deflink
* stripping spaces before if, endif, etc...

----- cvs ci ------
Tue Aug 06 20:36:01 CEST 2000
tobi:
* support for BeOS

----- cvs ci ------
Sat Aug  5 12:53:03 NOVST 2000
max:
* parsePath() modifications, see also docs about msgBaseDir.

----- cvs ci ------
Mon Jul 31 12:18:23 NOVST 2000
max (patch from Pavel Gulchouk):