@@ -174,7 +174,7 @@ typedef struct area {
    char keepUnread, killRead;
 
    e_dupeCheck dupeCheck;
-   char tinySB, killSB, hide, noPause, mandatory, DOSFile;
+   char tinySB, killSB, hide, noPause, mandatory, DOSFile, debug;
 
    unsigned levelread;	      // 0-65535
    unsigned levelwrite;	      // 0-65535
