@@ -479,6 +479,7 @@ int parseAreaOption(const s_fidoconfig *config, char *option, s_area *area)
    else if (stricmp(option, "nopause")==0) area->noPause = 1;
    else if (stricmp(option, "nolink")==0) area->nolink = 1;
    else if (stricmp(option, "mandatory")==0) area->mandatory = 1;
+   else if (stricmp(option, "debug")==0) area->debug = 1;
    else if (stricmp(option, "dosfile")==0) area->DOSFile = 1;
    else if (stricmp(option, "dupeCheck")==0) {
       token = strtok(NULL, " \t");
